--- a/app/global.css
+++ b/app/global.css
@@ -114,4 +114,8 @@
   button {
     @apply rounded-md text-center disabled:opacity-50 p-3 pt-1 pb-1 h-8;
   }
+
+  .white-transparent {
+    background-color: rgba(255,255,255,0.2);
+  }
 }
