Add top/bottom margin to <p> in markdown

--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -129,4 +129,8 @@
   .form-label {
     @apply flex xs:justify-end xs:font-medium justify-start font-semibold items-center pr-3;
   }
+
+  .react-markdown p {
+    @apply my-3;
+  }
 }
