Use revalidatePath to rebuild pages after data change

--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -115,7 +115,7 @@
   }
 
   button {
-    @apply rounded-md text-center disabled:opacity-50 p-3 pt-1 pb-1 h-8;
+    @apply rounded-md text-center disabled:opacity-50 disabled:cursor-not-allowed p-3 pt-1 pb-1 h-8;
   }
 
   .white-transparent {
