Remove extra margin to image coming through prose

--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -129,4 +129,11 @@
   .form-label {
     @apply flex xs:justify-end xs:font-medium justify-start font-semibold items-center pr-3;
   }
+
+  .prose {
+    img {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  }
 }
