--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -27,11 +27,11 @@
   }
 
   .main-container {
-    @apply bordered-container mt-20 lg:max-w-screen-lg sm:max-w-[90%];
+    @apply bordered-container mt-20 lg:max-w-screen-lg sm:max-w-[90%] flex-1;
   }
 
   .bordered-container {
-    @apply mx-auto max-w-screen-lg rounded-xl p-6 max-xs:p-2 flex-auto bg-gray-50 border border-solid border-gray-200;
+    @apply w-[90%] max-w-screen-lg rounded-xl p-6 max-xs:p-2 flex-auto bg-gray-50 border border-solid border-gray-200;
   }
 
   .menu-horizontal li {
